--- a/README.ko.rdoc
+++ b/README.ko.rdoc
@@ -11,6 +11,9 @@ Gimchi는 한글 스트링을 다롭니다.
 - 한글을 초성, 중성, 종성으로 분리하고, 이를 다시 합치는 기능
 - 숫자 표기를 한글 표현으로 변환
 
+== 설치
+  gem install gimchi
+
 == 사용법
 
 === Gimchi::Korean 인스턴스의 생성
