--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,6 @@
+=== 0.1.3 / 2011/04/08
+* Now compatible with Ruby 1.8
+
 === 0.1.2 / 2011/04/08
 * Bug fix in pronouncer.rb. It was undetectable on Ruby 1.9, but on 1.8
 
