--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,6 @@
+=== 0.1.4 / 2011/04/08
+* Minor improvement in romanization output. -y => y
+
 === 0.1.3 / 2011/04/08
 * Now compatible with Ruby 1.8
 
