--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,6 @@
+=== 0.1.8 / 2011/12/02
+* Added Gimchi::Korean#kchar
+
 === 0.1.7 / 2011/10/17
 * Bug fix: Fixed reading 0
 * Bug fix: Failing test on 1.8
